--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -862,6 +862,7 @@ button {
 .my-align-start,
 .my-flex-column,
 .my-justify-start,
+.my-justify-between,
 .my-flex-start {
     display: flex;
 }
@@ -906,6 +907,10 @@ button {
 
 .my-justify-center {
     justify-content: center;
+}
+
+.my-justify-between {
+    justify-content: space-between;
 }
 
 .my-flex-1 {
